# rust-website

./: .gitignore
grapevine/: Cargo.toml  forum.sqlite  test.txt
grapevine/src/: main.rs
grapevine/static/: index.html  style.css
grapevine/templates/: base.html.tera  conversation.html.tera  conversation_list.html.tera  hello.html.tera  login.html.tera  message.html.tera  message_list.html.tera  profile.html.tera  register.html.tera
