[package]
name = "grapevine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
rocket = "0.5.0-rc.2"
rocket-session-store = "0.2.0"
rocket_session = "0.3.0"
serde = "1.0.156"
serde_json = "1.0.94"
tera = "1"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "serve"]
